Iteration on windows-tojapan.html
– edited the contents
– replaced a user flow image

--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="video-content">
-                
+
                 <video class="video" autoplay muted loop>
                     <source src="wtj-img/Readmore.mp4" type="video/mp4">
                     Your browser does not support the video tag.
@@ -131,7 +131,8 @@
                 <div>
                     <p>Solution 2</p>
 
-                    <div class="video-text">Easier scanning with "read more" button & a chat feature for quick help.</div>
+                    <div class="video-text">Easier scanning with "read more" button & a chat feature for quick help.
+                    </div>
                     You decide how much to read and learn. Let our chat bot take care of your hassles.
                 </div>
 
@@ -156,10 +157,13 @@
     <div class="content mirror-body">
         <p>Competitive analysis</p>
         I was curious how other travel agencies transitioned from providing physical documents to their clients to
-        providing a full mobile experience. However, I couldn’t find any competitors doing this. Instead, I decided to
-        pick three itinerary apps and analyze how they organize travel information in their apps. Some of them have
-        similar features to what I envisioned, such as a chat bot and access to travel agents within the app. This gave
-        me some ideas of how to design an app with an integrated chat bot.
+        providing a full mobile experience. However, I couldn’t find any competitors doing this. Instead, I picked three
+        indirect competitors and analyzed their app features. <b>Some of them have similar features to what I
+            envisioned,
+            such as a chat bot and access to travel agents within the app.</b> This gave me some ideas of how to design
+        an app
+        with an integrated chat bot.
+
 
         <div>
 
@@ -174,11 +178,15 @@
         </div>
 
         <p>Survey</p>
-        I conducted a survey to learn about the frustrations and needs that people have when using travel apps. I
-        focused the survey on travel apps rather than travel agencies in order to get a sense of what patterns and
-        formats people find useful in a digital platform. Gathering this feedback helped me to prioritize features for
-        the Windows to Japan app. In addition, I included a question asking participants if they have used a travel
-        agency with an app, since I could not find any myself. Unsurprisingly, none of them had.
+        Now that I had some ideas of how I would organize and design the app, <b>I wanted to include the users in my
+            design.</b> In order to do that, I started with a survey to learn about the frustrations and needs that
+        people have
+        when using <b>travel apps.</b>
+        I focused the survey on travel apps rather than travel agencies in order to get a sense of what patterns and
+        formats people find useful in a digital platform. From the survey, the main thing I learned is that <b>all the
+            participants prefer bullet points and simplified instructions. </b>Gathering this feedback helped me to
+        prioritize
+        features for the Windows to Japan app.
 
 
         <div>
@@ -192,11 +200,12 @@
             </a>
 
             <p>1:1 User Interviews</p>
-            After the survey, I proceeded with user interviews to collect feedback on using travel agencies.
+            Once I gathered quantitative feedback on travel apps, I was curious what travel agency users have to say.
             Specifically, I wanted to discover the frustrations and needs people have when 1) using PDF or printed
             itineraries and 2) when connecting with an agent when a problem arises. From these interviews, I learned
-            that all of the participants prefer having detailed itineraries, but they also want to easily skip
-            uninteresting parts. This matched the feedback I received from the survey: all the survey participants want
+            that <b>all of the participants prefer having detailed itineraries, but they also want to easily skip
+                uninteresting parts.</b> This matched the feedback I received from the survey: all the survey
+            participants want
             a detailed itinerary but in a simple format.
 
             <br><br>
@@ -237,8 +246,8 @@
 
         In order to keep in mind who I'm designing this app for, I summarized the important feedback into a single
         persona, representing a core user.
-        I was able to quickly refer back to this persona during the whole design process, which helped me make
-        user-centered decisions.
+        I was able to quickly refer back to this persona during the whole design process, <b>which helped me make
+            user-centered decisions.</b>
 
         <div>
 
@@ -254,9 +263,12 @@
 
 
         <p>User Flow</p>
-        I decided to make a user flow in order to visualize how and when a user would take actions and navigate through
-        the app. I was able to understand which part of the app would be complicated and need extra attention. With this
-        flow clearly layed out, it makes it much easier to design a seamless user experience.
+        After I established the persona, I wanted to know more about the users–how they navigate the website in order to
+        complete tasks. <b>I decided to make a user flow in order to visualize how and when a user would take actions
+            and
+            navigate through the app.</b> I was able to understand which part of the app would be complicated and need
+        extra
+        attention. With this flow clearly laid out, it makes it much easier to design a seamless user experience.
 
         <div>
 
@@ -284,10 +296,9 @@
     <div class="content mirror-body">
 
         <p>Sketches</p>
-        Before designing any wireframes, I decided to sketch the layout of the app to solidify my rough ideas. I
-        sketched just one version first to combine the ideas of the app layout I got from my competitive analysis and
-        inspirations. Then I sketched a second version with an improved layout, including a simpler itinerary page that
-        is easier to parse.
+        Before designing any wireframes, <b>I decided to sketch the layout of the app to solidify my rough ideas.</b> I
+        sketched one version first to combine the ideas of the app layout I got from my competitive analysis and
+        inspirations.
         <div>
 
             <a href=#img-sketches-before class="lightbox-link">
@@ -299,6 +310,9 @@
             </a>
 
         </div>
+        Then I sketched a second version with an improved layout, including a simpler itinerary page that is easier to
+        parse. <b>I focused on the itinerary page since that’s the page that users will be looking at more than other
+        pages.</b>
         <div>
 
             <a href=#img-sketches class="lightbox-link">
@@ -316,12 +330,8 @@
 
         <p>Mid-Fidelity Wireframes</p>
         Next I created mid-fidelity wireframes to focus on the app's usability before making the final designs. While
-        creating these wireframes, I focused on the flow of the app, looking for anything I could iterate on. After
-        finishing the wireframes, I realized that it was somewhat confusing to navigate myself, due to visual clutter. I
-        iterated on the design to make it more intuitive by removing unnecessary features. One thing I was unsure about
-        was whether the swiping effect for events was clear. Instead of iterating on it immediately, I opted to conduct
-        usability testing on it, along with the entire flow.
-
+        creating these wireframes, I focused on the flow of the app, looking for anything I could iterate on. Here are
+        the final wireframes.
 
         <div>
 
@@ -334,6 +344,9 @@
             </a>
 
         </div>
+        After finishing the first version of wireframes, I realized that it was somewhat confusing to navigate myself,
+        due to visual clutter. <b>I iterated on the design to make it more intuitive by removing unnecessary features.</b>
+
         <div>
 
             <a href=#img-wireframe-iterations class="lightbox-link">
@@ -345,7 +358,8 @@
             </a>
 
         </div>
-
+        There was one thing I was unsure about, which was <b> whether the swiping effect for events was clear.</b> Instead of
+        iterating on it immediately, I opted to conduct usability testing on it, along with the entire flow.
         <div>
 
             <a href=#img-wireframe-swipe class="lightbox-link">
@@ -373,9 +387,9 @@
 
         <p>Affinity Map</p>
         I created the affinity map below to summarize user feedback and see what can be improved. Through the usability
-        testing I verified that the majority of people found the swiping effect unintuitive. In addition to that,
-        several participants mentioned that the edit icon was hard to find. I was glad to test the wireframes at this
-        point since I would have not known the edit icon was hard to find.
+        testing I verified that <b>the majority of people found the swiping effect unintuitive.</b> In addition to that,
+        <b>several participants mentioned that the edit icon was hard to find.</b> I was glad to test the wireframes at
+        this point since I would have not known the edit icon was hard to find.
 
         <div>
             <a href=#img-affinity-map class="lightbox-link">
@@ -394,8 +408,9 @@
 
         <p>Hi-Fidelity End-to-End Design</p>
         I worked on hi-fidelity designs based on the wireframes and feedback I received from the usability testing in
-        the previous process. Since travel itineraries on physical paper are usually overloaded with information, I
-        aimed to make the design not text-heavy but still include all the important details. I focused on making the
+        the previous process. Since travel itineraries on physical paper are usually overloaded with information, <b>I
+            aimed to make the design not text-heavy but still include all the important details.</b> I focused on making
+        the
         interface (edit icons, CTA buttons) clean and understandable. While iterating on the hi-fidelity wireframes, I
         realized the font sizes were very small (12-14px), so I made them larger (16px).
 
@@ -452,7 +467,7 @@
 
         <p>Affinity Map</p>
         Since I recruited more participants this time, usability testing revealed more feedback that helped me to see my
-        design objectively. I wanted to make an affinity map again to summarize the user feedback and organize them.
+        design objectively. <b>I wanted to make an affinity map again to summarize the user feedback and organize them.</b>
         This helped me to realize what I need to work on to make the design better.
 
         <div>
@@ -467,7 +482,7 @@
 
         <p>Priority Revision</p>
         After testing the app design, I was able to understand what was making users confused about the design. I wanted
-        to make revisions since both the edit button and swiping effect weren't clear enough. Apart from the
+        to make revisions since both <b>the edit button and swiping effect weren't clear enough. </b>Apart from the
         frustrations, I received a lot of good feedback about the app providing a detailed yet simple interface, which
         is what I was trying to achieve.
 
@@ -475,12 +490,16 @@
 
         <div>
             <div class="mirror-content">
-                Through usability testing of the mid-fidelity wireframes, I learned that it wasn't intuitive to swipe an
-                event without any explanations. For this reason, I decided to include on-boarding screens in the
-                hi-fidelity designs to make people aware of the feature. In the hi-fidelity usability testing, I learned
-                people still didn't realize they could swipe even though some participants read the whole on-boarding
-                screens (in the Zoom usability test). I didn't want the feature to be undiscoverable, so I decided to
-                include a pop-up screen on the itinerary page to get users' attention.
+                Through usability testing of the mid-fidelity wireframes, <b>I learned that it wasn't intuitive to swipe
+                    an
+                    event without any explanations.</b> For this reason, I decided to include on-boarding screens in the
+                hi-fidelity designs to make people aware of the feature. In the hi-fidelity usability testing, <b>I
+                    learned
+                    people still didn't realize they could swipe even though some participants read the whole
+                    on-boarding
+                    screens</b> (in the Zoom usability test). I didn't want the feature to be undiscoverable, so I
+                decided to
+                include <b>a pop-up screen on the itinerary page to get users' attention.</b>
             </div>
             <div>
                 <a href=#img-revision-popup class="lightbox-link">
@@ -497,8 +516,9 @@
             <div class="mirror-content">
                 From the mid-fidelity usability test I knew that the edit icon was hard to find. I tried making it more
                 obvious in the hi-fidelity designs, the participants still had a hard time finding it. I received some
-                feedback saying it's better to have text saying "edit" or "modify", so I decided to have both the icon
-                and text. Additionally, I moved it onto the card and enlarged it to be more prominent.
+                feedback saying it's better to have text saying "edit" or "modify", so <b>I decided to have both the
+                    icon
+                    and text. Additionally, I moved it onto the card and enlarged it to be more prominent.</b>
             </div>
             <div>
                 <a href=#img-revision-edit class="lightbox-link">
