--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -156,7 +156,7 @@
 
     <div class="content mirror-body">
         <p>Competitive analysis</p>
-        I was curious how other travel agencies transitioned from providing physical documents to their clients to
+        To start with, I was curious how other travel agencies transitioned from providing physical documents to their clients to
         providing a full mobile experience. However, I couldn’t find any competitors doing this. Instead, I picked three
         indirect competitors and analyzed their app features. <b>Some of them have similar features to what I
             envisioned,
