--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -156,7 +156,8 @@
 
     <div class="content mirror-body">
         <p>Competitive analysis</p>
-        To start with, I was curious how other travel agencies transitioned from providing physical documents to their clients to
+        To start with, I was curious how other travel agencies transitioned from providing physical documents to their
+        clients to
         providing a full mobile experience. However, I couldn’t find any competitors doing this. Instead, I picked three
         indirect competitors and analyzed their app features. <b>Some of them have similar features to what I
             envisioned,
@@ -312,7 +313,7 @@
         </div>
         Then I sketched a second version with an improved layout, including a simpler itinerary page that is easier to
         parse. <b>I focused on the itinerary page since that’s the page that users will be looking at more than other
-        pages.</b>
+            pages.</b>
         <div>
 
             <a href=#img-sketches class="lightbox-link">
@@ -345,7 +346,8 @@
 
         </div>
         After finishing the first version of wireframes, I realized that it was somewhat confusing to navigate myself,
-        due to visual clutter. <b>I iterated on the design to make it more intuitive by removing unnecessary features.</b>
+        due to visual clutter. <b>I iterated on the design to make it more intuitive by removing unnecessary
+            features.</b>
 
         <div>
 
@@ -358,7 +360,8 @@
             </a>
 
         </div>
-        There was one thing I was unsure about, which was <b> whether the swiping effect for events was clear.</b> Instead of
+        There was one thing I was unsure about, which was <b> whether the swiping effect for events was clear.</b>
+        Instead of
         iterating on it immediately, I opted to conduct usability testing on it, along with the entire flow.
         <div>
 
@@ -408,13 +411,31 @@
 
         <p>Hi-Fidelity End-to-End Design</p>
         I worked on hi-fidelity designs based on the wireframes and feedback I received from the usability testing in
-        the previous process. Since travel itineraries on physical paper are usually overloaded with information, <b>I
+        the previous process. I added onboarding so that users know how the app works.
+
+        <div>
+
+            <a href=#img-hifi-onbording class="lightbox-link">
+                <img class="mirror-content2" src="wtj-img/onboarding.jpg" alt="Onboarding screens">
+            </a>
+
+            <a href="#!" class="lightbox" id="img-hifi-onbording">
+                <span style="background-image: url('wtj-img/onboarding.jpg')"></span>
+            </a>
+
+        </div>
+
+        Since travel itineraries on physical paper are usually overloaded with information, <b>I
             aimed to make the design not text-heavy but still include all the important details.</b> I focused on making
-        the
-        interface (edit icons, CTA buttons) clean and understandable. While iterating on the hi-fidelity wireframes, I
+        the interface (edit icons, CTA buttons) clean and understandable. While iterating on the hi-fidelity wireframes,
+        I
         realized the font sizes were very small (12-14px), so I made them larger (16px).
 
         <br><br>
+        I decided to visually differenciate each event in the itinerary so I used icons to show what it is specifically
+        represents Japan.
+
+        <br>
 
         <div>
 
@@ -428,6 +449,10 @@
             </a>
 
         </div>
+
+        I also made the edit buttons easy to find by using a different color from other colors. I also moved up the edit
+        icon in the Todaiji Temple screen since users had a hard time finding it. If an event is reserved in advance
+
         <div>
 
             <a href=#img-hifi-others class="lightbox-link">
@@ -467,7 +492,8 @@
 
         <p>Affinity Map</p>
         Since I recruited more participants this time, usability testing revealed more feedback that helped me to see my
-        design objectively. <b>I wanted to make an affinity map again to summarize the user feedback and organize them.</b>
+        design objectively. <b>I wanted to make an affinity map again to summarize the user feedback and organize
+            them.</b>
         This helped me to realize what I need to work on to make the design better.
 
         <div>
