--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -51,7 +51,7 @@
             </div>
 
 
-            <img class="matcha-hero-image" src="Brightwheel/Mock-up.png" alt="Brightwheel app mock up three screens">
+            <img class="matcha-hero-image" src="Brightwheel/Mock-up.png" alt="Brightwheel app mock up three screens, Image by rawpixel.com">
         </div>
 
 
