--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -51,7 +51,7 @@
             </div>
 
 
-            <img class="matcha-hero-image" src="wtj-img/Mockup.png" alt="Windows to Japan app mock up screen">
+            <img class="matcha-hero-image" src="wtj-img/Mockup.png" alt="Windows to Japan app mock up screen, Image by rawpixel.com">
         </div>
 
 
