--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
                     <img class="case-study-image" src="img/wtj-mock-up.png"
-                        alt="Windows to Japan, an end-end application">
+                        alt="Windows to Japan, an end-end application, Image by rawpixel.com">
 
                 </a>
 
@@ -104,7 +104,7 @@
 
 
                     <img class="case-study-image" src="img/Mock-up-brightwheel.png"
-                        alt="Brightwheel, add a feature project">
+                        alt="Brightwheel, add a feature project, Image by rawpixel.com">
 
                 </a>
 
@@ -127,7 +127,7 @@
 
 
                     <img class="case-study-image" src="img/Matcha-mock-up.png"
-                        alt="All about matcha, e-commerce website">
+                        alt="All about matcha, e-commerce website, Image by rawpixel.com">
 
                 </a>
 
