Added a new html
– made a new case study

--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -605,12 +605,20 @@
     </div>
 
 
-    <div class="content-home">
+    
+    <div class="previous-after content-home">
+        
         <div class="previous-case-study">
-            <a class="previous-color-wtj" href="Brightwheel.html">View previous case study</a>
+            <a class="previous-color-wtj" href="windows-to-japan.html">View previous case study</a>
         </div>
-    </div>
 
+        <div class="after-case-study">
+            <a class="previous-color-wtj" href="1thing.html">View next case study</a>
+
+
+        </div>
+
+    </div>
 
 
 
