--- a/work.html
+++ b/work.html
@@ -46,17 +46,39 @@
             <h2>Case Studies</h2>
 
             <div class="case-study">
+                <a href="1thing.html">
+
+
+
+                    <img class="case-study-image" src="1thing/Mock-up.png"
+                        alt="1 Thing Against Racism Responsive screens, Image by rawpixel.com">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">VOLUNTEER PROJECT</div>
+                    <div class="case-study-title">1 Thing Against Racism</div>
+                    A responsive website to spread awareness about anti-Asian racism.
+                    <div><a class="case-study-cta case-study-cta-button" href="1thing.html">View case study</a>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+            <div class="case-study">
                 <a href="windows-to-japan.html">
 
 
 
                     <img class="case-study-image" src="img/wtj-mock-up.png"
-                        alt="Windows to Japan, end to end application">
+                        alt="Windows to Japan, end to end application, Image by rawpixel.com">
 
                 </a>
 
                 <div>
-                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="title-shurui">VOLUNTEER/STUDENT PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
                     An end-end application that replaces your physical itinerary with a digital one.
                     <div><a class="case-study-cta case-study-cta-button" href="windows-to-japan.html">View case study</a>
@@ -73,7 +95,7 @@
 
 
                     <img class="case-study-image" src="img/Mock-up-brightwheel.png"
-                        alt="Brightwheel, add a feature project">
+                        alt="Brightwheel, add a feature project, Image by rawpixel.com">
 
                 </a>
 
@@ -96,7 +118,7 @@
 
 
                     <img class="case-study-image" src="img/Matcha-mock-up.png"
-                        alt="All about matcha, e-commerce website">
+                        alt="All about matcha, e-commerce website, Image by rawpixel.com">
 
                 </a>
 
