--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@
 
         <div class="content-home">
             <h2>Case Studies</h2>
+            <div class="case-study">
+
+                <a href="1thing.html">
+
+
+
+                    <img class="case-study-image" src="1thing/Mock-up.png"
+                        alt="1 Thing Against Racism Responsive screens, Image by rawpixel.com">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">VOLUNTEER PROJECT</div>
+                    <div class="case-study-title">1 Thing Against Racism</div>
+                    A responsive website to spread awareness about anti-Asian racism.
+                    <div><a class="case-study-cta case-study-cta-button" href="1thing.html">View case study</a>
+                    </div>
+                </div>
+
+
+
+            </div>
 
             <div class="case-study">
                 <a href="windows-to-japan.html">
@@ -120,37 +142,13 @@
 
             </div>
 
-
-            <div class="case-study">
-                <a href="all-about-matcha.html">
-
-
-
-                    <img class="case-study-image" src="img/Matcha-mock-up.png"
-                        alt="All about matcha, e-commerce website, Image by rawpixel.com">
-
-                </a>
-
-                <div>
-                    <div class="title-shurui">PERSONAL PROJECT</div>
-                    <div class="case-study-title">All About Matcha</div>
-                    A responsive e-commerce website that provides online Japanese Tea Ceremony classes and matcha
-                    products.
-                    <div><a class="case-study-cta case-study-cta-button" href="all-about-matcha.html">View case
-                            study</a></div>
-                </div>
-
-
-
+            <div class="view-more-case-study, view-more-case-study">
+                <a class="view-more" href="work.html">View more case studies</a>
             </div>
-
-
-
-
+    
 
 
         </div>
-
 
 
     </div>
