--- a/work.html
+++ b/work.html
@@ -78,7 +78,7 @@
                 </a>
 
                 <div>
-                    <div class="title-shurui">VOLUNTEER/STUDENT PROJECT</div>
+                    <div class="title-shurui">VOLUNTEER PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
                     An end-end application that replaces your physical itinerary with a digital one.
                     <div><a class="case-study-cta case-study-cta-button" href="windows-to-japan.html">View case study</a>
