--- a/Brightwheel.html
+++ b/Brightwheel.html
@@ -531,8 +531,12 @@
     </div>
 
 
-    <footer> <small> Hand-crafted by Kotomi</small> </footer>
-
+    <footer>
+        <small> Hand-crafted by Kotomi <br>
+            <div class="footer-attribute">Some images are from <a class="footer-link" href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
+            </div>
+        </small>
+    </footer>
 
 
 </body>
