--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -655,11 +655,15 @@
             </a>
 
         </div>
-        <footer> <small> Hand-crafted by Kotomi</small> </footer>
     </div>
 
 
-
+    <footer>
+        <small> Hand-crafted by Kotomi <br>
+            <div class="footer-attribute">Some images are from <a class="footer-link" href="https://www.rawpixel.com/" target="_blank">rawpixel.com</a>
+            </div>
+        </small>
+    </footer>
 
 
 </body>
