--- a/work.html
+++ b/work.html
@@ -43,7 +43,30 @@
     <div class="work">
 
         <div class="content-home">
-            <h2>Case Studies</h2>
+            <h2>Projects</h2>
+
+
+            <div class="case-study">
+
+                <a href="skyhub.html">
+
+
+
+                    <img class="case-study-image" src="img/skyhub-mock-up.png"
+                        alt="Skyhub tablet screen, Image by rawpixel.com">
+
+                </a>
+
+                <div>
+                    <div class="title-shurui">WORK PROJECT</div>
+                    <div class="case-study-title">Skyhub</div>
+                    Enabling seniors to shop for groceries online. <div>
+                        <a class="case-study-cta case-study-cta-button"
+                            href="skyhub.html">View case study</a>
+                    </div>
+                </div>
+
+            </div>
 
             <div class="case-study">
                 <a href="1thing.html">
